# psynet-mirror

./: .bumpversion.toml  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  INSTALL_MACOS.md  INSTALL_UBUNTU.md  LICENSE  MANIFEST.in  NEWS.md  README.md  README_LINUX.md  dev-requirements.txt  draft_pyproject.toml  experiment.py  git-blame-ignore-revs.txt  monitor.py  notes.txt  postgres_setup.sql  pyproject.toml  run-ci-tests-locally-v2.sh  run-ci-tests-locally.sh  run-ci-tests.sh  setup.cfg  setup.py  tmp.py  unity_interface_description.md
ci/: .dallingerconfig  README  generate_junit_xml.py
demos/: add_tests.py  generate_constraints.py  requirements.txt  update_demos.py  update_gitignore.py
dlgr_monitor/: main.py
dlgr_utils/: experiment.py  field.py  imitation.py  misc.py  monitor.py  non-adaptive.py  page.py  participant.py  questions.py  timeline.py  trial.py  utils.py
docs/: Makefile  Trial.rst  about.rst  applications.rst  basic_usage.rst  command_line.rst  conf.py  demo.rst  development_workflow.rst  experiment_directory.rst  how_to_use.rst  index.rst  installation.rst  intro_tutorial.rst  make.bat  modular_page.rst  timeline.rst  trial_overview.rst  troubleshooting.rst  unity_page.rst  usage.rst
psynet/: __init__.py  asset.py  assets.py  bot.py  bots.py  colour_vocab.py  command_line.py  consent.py  dashboard.py  data.py  db.py  deployment_info.py  end.py  error.py  experiment.py  field.py  graphics.py  headphone.py  helpers.py  imitation.py  internationalization.py  (+18 more)
(+1407 files in other folders)
