[tool.poetry]
name = "dlgr_utils"
version = "0.9.0"
description = "Utilities for creating experiments with Dallinger."
authors = ["Peter Harrison <pmc.harrison@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">= 3.7.0"
dallinger = "^6.0.0"

[tool.poetry.dev-dependencies]
sphinx = "^2.4.4"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
